<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/count_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/count_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/count_text"
        app:layout_constraintStart_toEndOf="@+id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_3"/>

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/count_text"
        app:layout_constraintStart_toEndOf="@+id/key_2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/key_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_5"/>

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"/>

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_5"/>

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_8"/>

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_9"/>

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintEnd_toEndOf="@id/key_8"/>

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        app:layout_constraintStart_toStartOf="@id/key_9"/>

    <Button
        android:id="@+id/key_X"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_X"
        app:layout_constraintStart_toStartOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_0"
        app:layout_constraintEnd_toEndOf="@id/key_1"
        />

    <Button
        android:id="@+id/key_divided"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_devided"
        app:layout_constraintTop_toBottomOf="@id/key_0"
        app:layout_constraintEnd_toEndOf="@id/key_8"
        app:layout_constraintStart_toStartOf="@id/key_8"
        />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        app:layout_constraintStart_toStartOf="@id/key_X"
        app:layout_constraintTop_toBottomOf="@id/key_X"
        app:layout_constraintEnd_toEndOf="@id/key_X"
        />

    <Button
        android:id="@+id/key_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        app:layout_constraintStart_toEndOf="@id/key_minus"
        app:layout_constraintTop_toBottomOf="@id/key_divided"
        app:layout_constraintEnd_toEndOf="@id/key_plus"
        />




</androidx.constraintlayout.widget.ConstraintLayout>